--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,11 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="topColor">#3F51B5</color> <!-- Indigo -->
+    <color name="bottomColor">#303F9F</color> <!-- Darker Indigo -->
+    <color name="laGuardiaRed">#C8102E</color>
+    <color name="background">#F5F5F5</color> <!-- Light gray for clean background -->
+    <color name="cardBackground">#FFFFFF</color>
+    <color name="textPrimary">#212121</color>
+    <color name="textSecondary">#757575</color>
 </resources>
